--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 # Created by https://www.gitignore.io/api/windows,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=windows,visualstudiocode
 
+
+__pycache__
+DejaVuSansCondensed.pkl
+DejaVuSansCondensed.cw127.pkl
+
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
